examples/test/testpolicy5086.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5086
  namespace: namespace153
spec:
  podSelector:
    matchLabels:
      key20: value16
      key21: value48
      key11: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value17
          key34: value20
      podSelector:
        matchLabels:
          key23: value14
          key10: value44
          key13: value9
